feat: add button for closing all tabs

--- a/src/PageTabs.css
+++ b/src/PageTabs.css
@@ -54,3 +54,11 @@
   @apply light:(bg-cool-gray-400)
          dark:(bg-cool-gray-600);
 }
+
+.close-all {
+  opacity: 0;
+}
+
+.logseq-tab-wrapper:hover .close-all {
+ opacity: 1;
+}
